--- a/Weitianshi/pages/my/my/my.wxss
+++ b/Weitianshi/pages/my/my/my.wxss
@@ -535,8 +535,8 @@ page {
 /*红包 样式  */
 
 .redBag {
-  background: #fd354c;
-  border-radius: 12rpx;
+  /* background: #fd354c; */
+  /* border-radius: 12rpx; */
   width: 686rpx;
   height: 168rpx;
   margin: 32rpx 0 0 32rpx;
