--- a/Weitianshi/pages/my/sharePage/sharePage.wxss
+++ b/Weitianshi/pages/my/sharePage/sharePage.wxss
@@ -54,10 +54,10 @@
 }
 
 .modalBox {
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.75);
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   z-index: 999;
@@ -81,7 +81,9 @@
   text-align: center;
   position: absolute;
   top: 470rpx;
-  left: 238rpx;
+  /* left: 38.06%; */
+  margin-left: 38.06%;
+  font-weight: bold;
 }
 
 button {
