--- a/Weitianshi/redPackets/pages/crowdDetail/crowdDetail.wxml
+++ b/Weitianshi/redPackets/pages/crowdDetail/crowdDetail.wxml
@@ -1,15 +1,11 @@
 <import src="/redPackets/resource/Template/Template.wxml" />
 <!--错误提示  -->
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
-<scroll-view scroll-y="true" style="height: 1334rpx;" bindscrolltolower="loadMore" >
-  <view wx:if="{{flag == 1}}">
-    <view class="crowText">
-      <open-data type="groupName" open-gid="{{item.openGId}}"></open-data>
-    </view>
-    <block wx:for="{{insideHB}}" wx:key="{{index}}">
-      <template is="crowDetail" data="{{packetlist:packetlist,item:item}}"></template>
-    </block>
+<scroll-view scroll-y="true" style="height: 1334rpx;" bindscrolltolower="loadMore">
+  <view class="crowText">
+    <open-data type="groupName" open-gid="{{groupId}}"></open-data>
   </view>
-  <!--无内容显示  -->
-  <image src="{{packetover}}" class="packetover" wx:if="{{flag == 0}}"></image>
+  <block wx:for="{{insideHB}}" wx:key="{{index}}">
+    <template is="crowDetail" data="{{packetlist:packetlist,item:item}}"></template>
+  </block>
 </scroll-view>
