--- a/Weitianshi/redPackets/pages/openedHB/openedHB.wxss
+++ b/Weitianshi/redPackets/pages/openedHB/openedHB.wxss
@@ -13,7 +13,9 @@ page {
   justify-content: center;
   align-items: center;
 }
-
+.aline{
+  background: none;
+}
 .moreHB {
   font-size: 30rpx;
 }
