--- a/Weitianshi/redPackets/resource/Template/Template.wxml
+++ b/Weitianshi/redPackets/resource/Template/Template.wxml
@@ -4,7 +4,7 @@
 </template>
 <!--红包领取记录  -->
 <template name="HBrecord">
-  <view id="HBrecord" hover-class='HBrecord1' data-id="{{item.user.user_id}}" bindtap='userDetail'> 
+  <view id="HBrecord" hover-class='HBrecord1' data-id="{{item.user.user_id}}" bindtap='userDetail'>
     <view class="HBrecord flex">
       <image src="{{item.user.avatarUrl}}" class="HBrecordImg" wx:if="{{item.user.avatarUrl}}"></image>
       <image src="/img/img-touxiang@2x.png" class="HBrecordImg" wx:if="{{!item.user.avatarUrl}}"></image>
@@ -28,11 +28,11 @@
   </view>
 </template>
 <!--群红包  -->
-<template name="groupBox"> 
+<template name="groupBox">
   <view class="flex outsideBox" id="groupHB" bindtap='redDetail' hover-class='HBrecord1' data-groupid="{{item.openGId}}">
     <view class="groupPic">
-      <block wx:for="{{item.user}}" wx:key="{{index}}" wx:for-item="{{groupImage}}">
-        <image src="{{groupImage.avatarUrl}}" class='fourImage'></image>
+      <block wx:for="{{item.user}}" wx:key="idx" wx:for-index='idx' wx:for-item="groupImage">
+        <image wx:if='{{idx < 9}}' src="{{groupImage.avatarUrl}}" class='fourImage'></image>
         <!-- <image src="{{group.avatarUrl}}" class='fiveImage'></image> -->
       </block>
     </view>
@@ -41,8 +41,8 @@
         <open-data type="groupName" open-gid="{{item.openGId}}"></open-data>
       </view>
       <view class="groupNum">已领
-        <label class="number">{{item.count}}</label>个红包，还有
-        <label class="number">{{item.count-item.drawed_count}}</label>个红包未领取 </view>
+        <label class="number">{{item.drawed_count}}</label>个红包，还有
+        <label class="number">{{item.wait_count}}</label>个红包未领取 </view>
     </view>
   </view>
   <view class="aline"></view>
