--- a/Weitianshi/redPackets/pages/allCrowdHB/allCrowdHB.wxss
+++ b/Weitianshi/redPackets/pages/allCrowdHB/allCrowdHB.wxss
@@ -2,7 +2,6 @@ page {
   background: #f14b50;
 }
 
-
 .aline {
   opacity: 0.2;
   background: #fff;
@@ -10,7 +9,15 @@ page {
   height: 1rpx;
   margin: 0 32rpx;
 }
-.fourImage{
-  width: 35rpx;
-  height:35rpx;
+
+.fourImage {
+  width: 50rpx;
+  height: 50rpx;
+  border: 1rpx solid white;
+}
+
+.nineImage {
+  width: 33rpx;
+  height: 33rpx;
+  border: 1rpx solid white;
 }
