--- a/Weitianshi/redPackets/pages/openedHB/openedHB.wxss
+++ b/Weitianshi/redPackets/pages/openedHB/openedHB.wxss
@@ -13,9 +13,11 @@ page {
   justify-content: center;
   align-items: center;
 }
-.aline{
+
+.aline {
   background: none;
 }
+
 .moreHB {
   font-size: 30rpx;
 }
@@ -27,7 +29,7 @@ page {
   margin: 8rpx 0 40rpx 0;
 }
 
- .sendHB {
+.sendHB {
   font-size: 30rpx;
   color: #f7c660;
   text-align: center;
@@ -42,7 +44,7 @@ page {
 
 .jumpFirst {
   margin-left: 32rpx;
-   font-size: 30rpx;
+  font-size: 30rpx;
   color: #f7c660;
   text-align: center;
   border: 2rpx solid #f7c660;
@@ -69,7 +71,7 @@ page {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height:104rpx;
+  height: 104rpx;
 }
 
 .waitSure {
@@ -77,11 +79,15 @@ page {
   text-align: center;
   opacity: 0.5;
 }
-.fourImage{
+
+.fourImage {
   width: 35rpx;
-  height:35rpx;
+  height: 35rpx;
+  outline-width: 0px;
+  vertical-align: top;
 }
-.fiveImage{
-  width:24rpx;
+
+.fiveImage {
+  width: 24rpx;
   height: 24rpx;
 }
