--- a/Weitianshi/redPackets/resource/Template/Template.wxml
+++ b/Weitianshi/redPackets/resource/Template/Template.wxml
@@ -1,3 +1,4 @@
+<import src="/pages/Template/Template.wxml"/>
 <!--提示  -->
 <template name='error'>
   <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
