--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -1,54 +1,12 @@
 /* @import "weui.wxss"; */
+@import './common.wxss';
 @import '/utils/wxss/myContactsCard.wxss';
 @import '/utils/wxss/filterModel.wxss';
 @import '/utils/wxss/organization.wxss';
 @import '/utils/wxss/filterTag.wxss';
 @import '/utils/wxss/oneadd.wxss';
 @import '/utils/wxss/HB.wxss';
-
-scroll-view {
-  height: 100%;
-}
-
-button {
-  padding: 0;
-  margin: 0;
-  padding-left: 0;
-  padding-right: 0;
-  margin-left: 0;
-  margin-right: 0;
-  position: static;
-  border-radius: 0;
-  background: white;
-  /* text-align: left; */
-}
-
-button::after {
-  border: none;
-  width: auto;
-  height: auto;
-  background: white;
-}
-
-.container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-}
-
-.flex {
-  display: flex;
-}
-
-page {
-  background-color: #f2f3f4;
-  /*font-size: 16px;*/
-  font-family: -apple-system-font, Helvetica Neue, Helvetica, sans-serif;
-}
+@import '/utils/wxss/registerModal.wxss';
 
 .page__hd {
   padding: 40px;
@@ -1667,3 +1625,4 @@ textarea {
   height: 104rpx;
   width: 100%;
 }
+
