--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -1519,3 +1519,24 @@
     </image>
   </view>
 </template>
+
+<!--注册方式选择弹框  -->
+<template name='registerModal'>
+  <view id='registerModal'>
+    <view class='modalBox'></view>
+    <view class='registerFrame'>
+      <view class='title tc'>
+        登录/注册
+        <image class='closeIcon' src='/img/register-guanbi@2x.png'></image>
+      </view>
+      <button class='wxSign tc'>
+        <view>
+          <image class='wxSignIcon' src='/img/register-weixin@2x.png'></image>微信授权登录</view>
+      </button>
+      <button class='telephoneSign'>
+        <view>
+          <image class='telephoneSign' src='/img/register-dadianhua@2x.png'></image>手机验证登录</view>
+      </button>
+    </view>
+  </view>
+</template>
