--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -1529,14 +1529,14 @@
         登录/注册
         <image class='closeIcon' src='/img/register-guanbi@2x.png'></image>
       </view>
-      <button class='wxSign tc'>
+      <button class='wxSign tc' open-type='getPhoneNumber' bindgetphonenumber="getPhoneNumber" >
         <view>
           <image class='wxSignIcon' src='/img/register-weixin@2x.png'></image>微信授权登录</view>
       </button>
-      <button class='telephoneSign'>
+      <button class='telephoneSign'  bindtap='telephoneRegister'>
         <view>
           <image class='telephoneSign' src='/img/register-dadianhua@2x.png'></image>手机验证登录</view>
       </button>
     </view>
   </view>
-</template>
+</template> 
