--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -1527,16 +1527,18 @@
     <view class='registerFrame'>
       <view class='title tc'>
         登录/注册
-        <image class='closeIcon' src='/img/register-guanbi@2x.png'></image>
+        <button hover-class="closeIconClass" class="closeClass">
+          <image class='closeIcon' src='/img/register-guanbi@2x.png'></image>
+        </button>
       </view>
-      <button class='wxSign tc' open-type='getPhoneNumber' bindgetphonenumber="getPhoneNumber" >
+      <button class='wxSign tc' open-type='getPhoneNumber' bindgetphonenumber="getPhoneNumber" hover-class='wxSignClass'>
         <view>
           <image class='wxSignIcon' src='/img/register-weixin@2x.png'></image>微信授权登录</view>
       </button>
-      <button class='telephoneSign'  bindtap='telephoneRegister'>
+      <button class='telephoneSign' bindtap='telephoneRegister' hover-class='telephoneClass'>
         <view>
-          <image class='telephoneSign' src='/img/register-dadianhua@2x.png'></image>手机验证登录</view>
+          <image class='wxSignIcon' src='/img/register-dadianhua@2x.png'></image>手机验证登录</view>
       </button>
     </view>
   </view>
-</template> 
+</template>
