--- a/Weitianshi/pages/my/sharePage/sharePage.wxml
+++ b/Weitianshi/pages/my/sharePage/sharePage.wxml
@@ -8,11 +8,15 @@
     </view>
     <view class="modalBox" wx:if="{{!show}}">
       <image class="tankuang" src="{{tankuang}}"></image>
-      <view class="getMoney">￥<label>{{bounce_money}}</label></view>
-      <view class="getName" wx:if='{{share_id != user_id && personInfo.is_card == 0}}'>
-        <checkbox class="checkM" checked/> 添加{{personInfo.user.user_real_name}}投资名片
+      <view class="getMoney">￥
+        <label>{{bounce_money}}</label>
       </view>
-      <form report-submit='true' bindsubmit='makeSure'>
+      <view wx:if='{{share_id != user_id}}'>
+        <view class="getName" wx:if='{{personInfo.is_card == 3 || personInfo.is_card == 0}}'>
+          <checkbox class="checkM" checked/> 添加{{personInfo.user.user_real_name}}投资名片
+        </view>
+      </view>
+      <form report-submit='true' bindsubmit='makeSure' data-cardid="{{personInfo.is_card}}">
         <button form-type='submit' hover-class='buttonnone'>
           <image class="btnSure" src="{{queding}}"></image>
         </button>
