--- a/Weitianshi/pages/register/companyInfo/companyInfo.wxml
+++ b/Weitianshi/pages/register/companyInfo/companyInfo.wxml
@@ -3,18 +3,22 @@
 <view id="companyInfo" wx:if="{{nonet}}">
   <form>
     <view class="flex title">公司信息，有助于投资人或项目快速识别您的身份</view>
-    <view id="company" class="flex">
-      <input placeholder="公司" maxlength="40" value="{{company}}" bindblur="company" />
-    </view>
-    <view id="position" class="flex">
-      <input placeholder="职位" maxlength="40" value="{{position}}" bindblur="position" />
-    </view>
-    <view id="email" class="flex">
-      <input placeholder="邮箱(选填)" bindblur="checkEmail" value="{{email}}" />
+    <view id="name" class="flex">
+      <input placeholder="姓名*" bindblur="name" value="{{name}}" maxlength="40" />
     </view>
     <view id="brand" class="flex">
       <input placeholder="品牌" bindblur="checkBrand" value="{{brand}}" maxlength="40" />
     </view>
+    <view id="company" class="flex">
+      <input placeholder="公司*" maxlength="40" value="{{company}}" bindblur="company" />
+    </view>
+    <view id="position" class="flex">
+      <input placeholder="职位*" maxlength="40" value="{{position}}" bindblur="position" />
+    </view>
+    <view id="email" class="flex">
+      <input placeholder="邮箱(选填)" bindblur="checkEmail" value="{{email}}" />
+    </view>
+
     <button form-type="submit" hover-class='t-other-button-hover' class="nextBtn complete-infom" bindtap="backHome" loading="{{loading=='1'}}">
       完成
     </button>
