--- a/Weitianshi/pages/my/projectShop/projectSearch/projectSearch.wxml
+++ b/Weitianshi/pages/my/projectShop/projectSearch/projectSearch.wxml
@@ -1,5 +1,5 @@
 <import src="/pages/Template/Template.wxml" />
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view wx:if="{{nonet}}">
   <view class="search_frame">
     <label class="searchBox flex">
