--- a/Weitianshi/pages/my/projectShop/shopEdit/shopEdit.wxml
+++ b/Weitianshi/pages/my/projectShop/shopEdit/shopEdit.wxml
@@ -1,4 +1,4 @@
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view wx:if="{{nonet}}">
   <view class="classname">
     <view class="shopTitle">店铺图片</view>
