--- a/Weitianshi/pages/discover/financingAdvisor/financingAdvisor.wxml
+++ b/Weitianshi/pages/discover/financingAdvisor/financingAdvisor.wxml
@@ -1,6 +1,6 @@
 <import src="/pages/Template/Template.wxml" />
 
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view wx:if="{{nonet}}">
   <!--筛选和搜索  -->
   <template is="newSearch" data="{{text:searchText,searchTap:'searchSth',filter:'tagFilter'}}"></template>
