--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -1,6 +1,5 @@
 <import src="/pages/Template/Template.wxml" />
-
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <!--错误提示  -->
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
 <view wx:if="{{nonet}}">
@@ -106,5 +105,3 @@
     <image class="t_image1" src="{{loadingGif}}"></image>
   </view>
 </view>
-
- <!-- <template is='registerModal'></template>  -->
