--- a/Weitianshi/pages/form/area1/area1.wxml
+++ b/Weitianshi/pages/form/area1/area1.wxml
@@ -1,4 +1,4 @@
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view id="payArea" class="flex" wx:if="{{nonet}}">
   <scroll-view scroll-y="true" class="frame_province">
     <view>
