--- a/Weitianshi/pages/form/industry/industry.wxml
+++ b/Weitianshi/pages/form/industry/industry.wxml
@@ -1,5 +1,5 @@
 <import src="/pages/Template/Template.wxml" />
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view id="doMain" wx:if="{{nonet}}">
   <view class="title">*最多可选择5个</view>
   <view class="context flex">
