--- a/Weitianshi/pages/form/personInfo/personInfo.wxml
+++ b/Weitianshi/pages/form/personInfo/personInfo.wxml
@@ -1,4 +1,4 @@
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 
 <view wx:if="{{nonet}}">
   <view wx:if="{{type == 0}}">
