--- a/Weitianshi/pages/form/scale/scale.wxml
+++ b/Weitianshi/pages/form/scale/scale.wxml
@@ -1,4 +1,4 @@
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view id="doMain" wx:if="{{nonet}}">
   <view class="title">*最多可选择5个</view>
   <view class="context flex">
