--- a/Weitianshi/pages/match/match/investDemand/investDemand.wxml
+++ b/Weitianshi/pages/match/match/investDemand/investDemand.wxml
@@ -1,6 +1,6 @@
 <import src="/pages/Template/Template.wxml"></import>
 
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view wx:if="{{nonet}}">
   <view id="myProject">
     <view class="card">
