--- a/Weitianshi/pages/message/message/message.wxml
+++ b/Weitianshi/pages/message/message/message.wxml
@@ -1,5 +1,5 @@
 <import src="/pages/Template/Template.wxml" />
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view wx:if="{{nonet}}">
   <block wx:for="{{messageList}}" wx:key="index">
     <template is="messageList" data="{{item:item,status:status}}"></template>
