--- a/Weitianshi/pages/my/identity/indentity/indentity.wxml
+++ b/Weitianshi/pages/my/identity/indentity/indentity.wxml
@@ -1,5 +1,5 @@
 <import src="/pages/Template/Template.wxml" />
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view wx:if="{{nonet}}">
   <block wx:for="{{messageList}}" wx:key="{{index}}">
     <template is="identityList" data="{{item:item}}"></template>
