--- a/Weitianshi/pages/my/investCase/investCase.wxml
+++ b/Weitianshi/pages/my/investCase/investCase.wxml
@@ -1,5 +1,5 @@
 <import src="/pages/Template/Template.wxml" />
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view wx:if="{{nonet}}">
   <scroll-view style="height:100%;" scroll-y="true">
     <!--已发布的项目-->
