--- a/Weitianshi/pages/my/sharePage/sharePage.wxml
+++ b/Weitianshi/pages/my/sharePage/sharePage.wxml
@@ -1,5 +1,5 @@
 <import src="/pages/Template/Template.wxml" />
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view wx:if="{{nonet}}">
   <view wx:if='{{is_redPackets}}'>
     <!--弹框 提示 -->
