--- a/Weitianshi/pages/myProject/historyFiance/historyFiance.wxml
+++ b/Weitianshi/pages/myProject/historyFiance/historyFiance.wxml
@@ -1,5 +1,5 @@
 <import src="/pages/Template/Template.wxml" />
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view wx:if="{{nonet}}">
   <!--历史融资  -->
   <scroll-view style="height:1200rpx;background:#fff;padding-top:20rpx" scroll-y="true">
