--- a/Weitianshi/pages/myProject/proBrand/proBrand.wxml
+++ b/Weitianshi/pages/myProject/proBrand/proBrand.wxml
@@ -1,5 +1,5 @@
 <import src="/pages/Template/Template.wxml" />
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view wx:if="{{nonet}}">
   <!--历史融资  -->
   <scroll-view style="height:1200rpx;background:#fff;width:93%;padding:20rpx 32rpx 32rpx 32rpx" class="proBrand" scroll-y="true">
