--- a/Weitianshi/pages/myProject/proTeam/proTeam.wxml
+++ b/Weitianshi/pages/myProject/proTeam/proTeam.wxml
@@ -1,5 +1,5 @@
 <import src="/pages/Template/Template.wxml" />
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view wx:if="{{nonet}}">
   <!--核心团队  -->
   <scroll-view style="height:1200rpx;background:#fff;padding-top:20rpx;padding-left:32rpx;width:98%" scroll-y="true">
