--- a/Weitianshi/pages/organization/org_detail/org_detail.wxml
+++ b/Weitianshi/pages/organization/org_detail/org_detail.wxml
@@ -2,7 +2,7 @@
 <import src="/pages/Template/Template.wxml" />
 
 
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view wx:if="{{nonet}}">
   <scroll-view style='heigt:3000rpx;' scroll-y='true'>
     <!--投资机构类型，标签  -->
