--- a/Weitianshi/pages/organization/subPage/list_industry/list_industry.wxml
+++ b/Weitianshi/pages/organization/subPage/list_industry/list_industry.wxml
@@ -1,4 +1,4 @@
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view wx:if="{{nonet}}">
   <!--热门领域  -->
   <scroll-view scroll-y="true" bindscrolltolower='loadMore' scroll-top="{{scroll}}" class="scrollStyle">
