--- a/Weitianshi/pages/organization/subPage/list_orgMember/list_orgMember.wxml
+++ b/Weitianshi/pages/organization/subPage/list_orgMember/list_orgMember.wxml
@@ -2,7 +2,7 @@
 <!--pages/organization/subPage/list_media/list_media.wxml-->
 <import src="/pages/Template/Template.wxml" />
 
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view wx:if="{{nonet}}">
   <scroll-view style='heigt:3000rpx;' scroll-y='true' bindscrolltolower='loadMore'>
 
