--- a/Weitianshi/pages/projectScale/projectEvaluation/projectEvaluation.wxml
+++ b/Weitianshi/pages/projectScale/projectEvaluation/projectEvaluation.wxml
@@ -1,7 +1,7 @@
 <!--pages/projectScale/projectEvaluation.wxml-->
 <import src="/pages/Template/Template.wxml" />
 
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view wx:if="{{nonet}}">
   <!--滑块评分  -->
   <view class="slider">
