--- a/Weitianshi/pages/search/search3/search3.wxml
+++ b/Weitianshi/pages/search/search3/search3.wxml
@@ -1,6 +1,6 @@
 <import src="/pages/Template/Template.wxml" />
 
-<include src='/utils/wxml/netWork' />
+<include src='/utils/wxml/common' />
 <view wx:if="{{nonet}}">
 
   <view class="search_frame">
