--- a/Weitianshi/pages/register/companyInfo/companyInfo.wxss
+++ b/Weitianshi/pages/register/companyInfo/companyInfo.wxss
@@ -1,7 +1,6 @@
-page{
-    background: white;
-}
-#companyInfo{
+
+
+/* #companyInfo{
     font-size: 28rpx;
     color: #333;
     padding: 0 48rpx;
@@ -42,4 +41,49 @@ input{
     font-size: 32rpx;
     border-radius: 200rpx;
 }
+ */
 
+.title {
+  opacity: 0.9;
+  background: #293b55;
+  font-size: 28rpx;
+  color: #fff;
+  text-align: left;
+  padding: 32rpx;
+  line-height: 40rpx;
+}
+
+.projectBoxContent {
+  justify-content: space-between;
+  margin: 0 32rpx;
+  height: 114rpx;
+  border-bottom: 1rpx solid #f0f0f0;
+}
+
+.noBorder {
+  border: none;
+}
+
+.projectTitle {
+  font-size: 32rpx;
+  color: #333;
+  line-height: 112rpx;
+}
+
+.newBox {
+  text-align: right;
+  height: 112rpx;
+  line-height: 112rpx;
+  width: 536rpx;
+  font-size: 28rpx;
+  color: #333;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.boxStyle{
+  background: #fff;
+}
+.bottomStyle{
+  margin-bottom:24rpx;
+}
